datasets/dataset_txt/mitmproxy/mitmproxy_1227.txt
marinabilles commented on 29 Jan 2016
I have the following python2 script to run with mitmproxy:
print "This is an " + "error"
I use the following bash command:
mitmdump -q --anticache -s ../script.py
mitmproxy version 0.14 correctly prints out the string.
mitmproxy version 0.15 gives me:
mitmdump: Traceback (most recent call last):
  File "/usr/local/lib/python2.7/dist-packages/libmproxy/script/script.py", line 65, in load
    execfile(self.args[0], self.ns, self.ns)
  File "../script.py", line 1
    print "This is an " + "error"
                      ^
SyntaxError: invalid syntax